examples/test/testpolicy14312.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14312
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key17: value24
      key38: value11
      key5: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value31
          key24: value0
          key2: value16
      podSelector:
        matchLabels:
          key8: value28
